[DEV] Moved jwt secret to the application.properties
Signed-off-by: Jose Angel Yustiz Jimenez <jose.yustiz@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.h2.console.settings.trace=false
 spring.h2.console.settings.web-allow-others=false
+#Desable auto schema creation
+spring.jpa.hibernate.ddl-auto=none
+jwt.secret=e0uQbzD{oMC,JZulY#W
