[DEV] Added Integration Test Task to build.gradle
Signed-off-by: Jose Angel Yustiz Jimenez <jose.yustiz@gmail.com>

--- a/build.gradle
+++ b/build.gradle
@@ -42,3 +42,34 @@ dependencies {
 test {
     useJUnitPlatform()
 }
+//[BEGIN] Integration test configuration
+sourceSets {
+    intTest {
+        compileClasspath += sourceSets.main.output
+        runtimeClasspath += sourceSets.main.output
+    }
+}
+
+configurations {
+    intTestImplementation.extendsFrom implementation
+    intTestRuntimeOnly.extendsFrom runtimeOnly
+}
+
+dependencies {
+    intTestImplementation('org.springframework.boot:spring-boot-starter-test') {
+        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
+    }
+    intTestImplementation 'org.springframework.security:spring-security-test'
+}
+task integrationTest(type: Test) {
+    description = 'Runs integration tests.'
+    group = 'verification'
+
+    testClassesDirs = sourceSets.intTest.output.classesDirs
+    classpath = sourceSets.intTest.runtimeClasspath
+    shouldRunAfter test
+    useJUnitPlatform()
+}
+
+check.dependsOn integrationTest
+//[END] Integration test configuration
